--- a/BBB_DjangoProjects/pwdweb/records/templates/records/base.html
+++ b/BBB_DjangoProjects/pwdweb/records/templates/records/base.html
@@ -1,10 +1,25 @@
+{%  load static from staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0">
+    <link href="{% static 'records/css/main.css' %}" rel="stylesheet">
+
+    <title>{%  block title %}Title{%  endblock title %}</title>
 </head>
+
 <body>
-$END$
+    <div id="page-content">
+        {%  block page-content %}{%  endblock page-content %}
+    </div>
+    <div id="footer">
+        {% block footer %}{% endblock footer %}
+    </div>
+    {% block scripts %}
+        <script src="{%  static "records/js/jquery-3.1.1.min.js" %}">
+        </script>
+    {% endblock scripts %}
 </body>
 </html>
