--- a/BBB_DjangoProjects/pwdweb/records/templates/records/home.html
+++ b/BBB_DjangoProjects/pwdweb/records/templates/records/home.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'records/base.html' %}
+{% block title %}Welcome to the Records Website.{% endblock title %} }}
+
+{% block page-content %}
+    <h1>Welcome {{ user.first_name }}!</h1>
+    <div class="home-option">
+        To create a record click
+        <a href="{% url 'records:add' %}">here.</a>
+    </div>
+    <div class='home-option'>
+            To see all records click
+            <a href="{%  url "records:list" %}">here.</a>
+    </div>
+{% endblock page-content %}
