--- a/BBB_DjangoProjects/pwdweb/records/templates/records/messages.html
+++ b/BBB_DjangoProjects/pwdweb/records/templates/records/messages.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% if messages %}
+    {% for message in messages %}
+        <p class="{{  message.tags }}">{{ message }}</p>
+    {% endfor %}
+{% endif %}
