--- a/AAA_WorkProjects/CompetitionManagement/CompetitionManagement/templates/base.html
+++ b/AAA_WorkProjects/CompetitionManagement/CompetitionManagement/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -9,14 +10,35 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="" href="{% static 'css/bootstrap.min.css' %}">
-        {% block css-includes %}{% endblock %}
+        <link rel="stylesheet" href="{% static 'css/main.css' %}">
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+        {% block css-includes %}{% endblock %}  
+
+        {% comment %}Main Navigation{% endcomment %}
+        <nav class="navbar navbar-fixed-top">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="#">CDRC</a>
+            </div>
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="{% url 'portal:competition' %}">Competition</a></li>
+              <li><a href="{% url 'portal:venue'%}">Venue</a></li>
+              <li><a href="{% url 'portal:teams'%}">Teams</a></li>
+              <li><a href="{% url 'portal:experts' %}">Experts</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Apply</a></li>
+                <li><a href="#">Log in</a></li>
+            </ul>
+          </div>
+        </nav>
     </head>
     <body>
+        
+
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    
     {% comment %}{% endcomment %}
     {% if user.is_authenticated %}
     {% endif %}
@@ -27,6 +49,21 @@
 
     {% block content %}
     {% endblock %}
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <section class="col-md-4">
+                    Contact Information
+                </section>
+                <section class="col-md-8">
+                    Site Map and Venue Details
+                </section>
+            </div>
+
+        </div>
+    </footer>
+    
 
     {% comment %}JS Includes{% endcomment %}
     <script src="{% static 'js/jquery.min.js'}"></script>
