--- a/AAA_WorkProjects/CompetitionManagement/portal/templates/portal/teams/team_listview.html
+++ b/AAA_WorkProjects/CompetitionManagement/portal/templates/portal/teams/team_listview.html
@@ -1,6 +1,9 @@
 {% extends 'base_profile.html' %}
 
+
+
 {% block profile-header %}
+
 <section class="jumbotron">
     <div class="container">
         <header>
@@ -30,7 +33,7 @@
                 </form>
             </div>
             <div class="searchBox col-sm-4">
-                <h4>Find an Expert</h4>
+                <h4>Find an team</h4>
                 <form method="POST" action="">
                     <table>
                         {{ search_form.as_table }}
@@ -42,30 +45,42 @@
 </section>
 {% endblock %}
 
+
+
 {% block profile-content %}
-    {% for expert in expert_list %}
-    <a href="{% url 'portal:expert_profile' expert.user.username %}">
+
+    {% for team in team_list.all %}
+    <a href="{% url 'portal:team_profile' team.slug %}">
         <article class="list_item row">
             <header class="col-sm-3">
-                <img src="{% if exper.expertprofile.profileImg %}{{ expert.expertprofile.profileImg.url }}{% else %}https://placehold.it/180x190{% endif %}" alt="">
-                <h4>{{ expert.user.first_name }}<br>{{ expert.user.last_name }}</h4>
-            </header>
-            <content class="col-sm-9">
-                <blockquote cite="">
-                    {{ expert.expertprofile.slogan }}
-                </blockquote>
-                <h3>Biography</h3>
-                <p>{{ expert.expertprofile.bio|truncatewords:60 }}</p>
-            </content>
-            <footer>
-                <ul class="list-inline">
+                <small>{{ team.country }}</small>
+                <h3>{{ team.university }}</h3>
+                <h4>Languages spoken</h4>
+                <p>{{ team.teamprofile.languages_spoken }}</p>
+                <h4>Members</h4>
+                <ul class="list-unstyled">
+                    {% for member in team.student_set.all %}
+                    <li>{{ member.user.get_full_name}}</li>
+                    {% endfor %}
+                </ul>
+                <footer>
+                {% comment %}<ul class="list-inline">
                     <li><a href="#">Twitter</a></li>
                     <li><a href="#">Facebook</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Official</a></li>
-                </ul>
+                </ul>{% endcomment %}
             </footer>
+            </header>
+            <content class="col-sm-9">
+                <img class="img-responsive" src="{% if team.profile.profileImg %}{{ team.profile.profileImg.url }}{% else %}https://placehold.it/1200x350{% endif %}" alt="">
+                <h3>Description</h3>
+                <p>{{ team.teamprofile.presentation_text|truncatewords:300 }}</p>
+
+            </content>
+            
         </article>
     </a>
-    {% endfor %}
+{% endfor %}
+
 {% endblock %}
