--- a/AAA_WorkProjects/CompetitionManagement/portal/templates/portal/experts/experts_detailview.html
+++ b/AAA_WorkProjects/CompetitionManagement/portal/templates/portal/experts/experts_detailview.html
@@ -6,26 +6,25 @@
     
     <header class="container">
         <div class="profile_details col-sm-4">
-            <img src="{% if user.attendent.expertprofile.profileImg %}{{ user.attendent.expertprofile.profileImg }} {% else %} https://placehold.it/180x180 {% endif %}" alt="">
-            <div class="interaction btn-group btn-group">
+            <img src="{% if user.attendent.profile.profileImg %}{{ user.attendent.profile.profileImg.url}} {% else %} https://placehold.it/180x180 {% endif %}" alt="">
+            <div class="contact-buttons btn-group btn-group">
                 {% if user.attendent.role == 'expert' %}
                     <button type="button" class="btn btn-success">Connect</button>
                     <button type="button" class="btn btn-primary">Recommend</button>
                 {% else %}
                     <button type="button" class="btn btn-success">Ask to Connect</button>
-                    {% comment %}Make this available when connected{% endcomment %}
                     <button type="button" class="btn btn-primary">Schedule Meetup</button>
                 {% endif %}
             </div>
             <h2>{{ user.get_full_name }}</h2>
-            <p class="affiliation">{{ user.attendent.expertprofile.position }}</br>
-            {{ user.attendent.expertprofile.affiliation }}</p>
+            <p class="affiliation">{{ user.attendent.profile.expertprofile.position }}</br>
+            {{ user.attendent.profile.expertprofile.affiliation }}</p>
             
             
             <nav class="social_links list-inline">
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="{{ user.attendent.expertprofile.twitter }}">Twitter</a></li>
+                <li><a href="{{ user.attendent.expertprofile.facebook }}">Facebook</a></li>
+                <li><a href="{{ user.attendent.expertprofile.blog }}">Blog</a></li>
             </nav>
             <ul class="contact_details list-unstyled">
                 <li><span class="glyphicon glyphicon-phone">+43 678 123 5678</span></li>
@@ -40,8 +39,9 @@
                 <header>
                 </header>
                 <content>
+                    <h3>Slogan</h3>
                     <blockquote cite="">
-                        {{ user.attendent.expertprofile.slogan }}
+                        {{ user.attendent.profile.expertprofile.slogan }}
                     </blockquote>
                 </content>
             </article>
@@ -50,7 +50,7 @@
                     <h3>Biography</h3>
                 </header>
                 <content>
-                    {{ user.attendent.expertprofile.bio }}
+                    {{ user.attendent.profile.expertprofile.bio }}
                 </content>
             </article>
         </content>
@@ -61,7 +61,33 @@
 {% block profile-content %}
 <section class="container">
      <content>
-        {% for experience in user.attendent.expertprofile.mediation_experience.all %}
+        {% for experience in user.attendent.profile.expertprofile.mediation_experience.all %}
+           <article class="row">
+               <header class="col-sm-4">
+                   <h4>{{ experience.get_profession_display }}</h4>
+                    <ul class="list-unstyled">
+                        <li>for {{ experience.duration }} years</li>
+                        <li>with {{ experience.cases }} cases worked</li>
+                    </ul>
+               </header>
+               <content class="col-sm-8">
+                   <h4>Summary</h4>
+                   <p>{{ experience.description }}</p>
+                   <aside>
+                       <div class="col-sm-6">
+                           <h4>Clients I worked with</h4>
+                           <p>{{ experience.priorClients }}</p>
+                       </div>
+                        <div class="col-sm-6">
+                            <h4>Places I worked in</h4>
+                            <p>{{ experience.placesWorked }}</p>
+                        </div>
+                   </aside>
+               </content>
+           </article>
+        {% endfor %}
+
+        {% for experience in user.attendent.profile.expertprofile.negotiation_experience.all %}
            <article class="row">
                <header class="col-sm-4">
                    <h4>{{ experience.get_profession_display }}</h4>
