--- a/AAA_WorkProjects/CompetitionManagement/portal/templates/portal/teams/team_detailview.html
+++ b/AAA_WorkProjects/CompetitionManagement/portal/templates/portal/teams/team_detailview.html
@@ -2,95 +2,99 @@
 
 
 {% block profile-header %}
-<section class="jumbotron row">
-    
-    <header class="container">
-        <div class="profile_details col-sm-4">
-            <img src="{% if user.attendent.expertprofile.profileImg %}{{ user.attendent.expertprofile.profileImg }} {% else %} https://placehold.it/180x180 {% endif %}" alt="">
-            <div class="interaction btn-group btn-group">
-                {% if user.attendent.role == 'expert' %}
-                    <button type="button" class="btn btn-success">Connect</button>
-                    <button type="button" class="btn btn-primary">Recommend</button>
-                {% else %}
-                    <button type="button" class="btn btn-success">Ask to Connect</button>
-                    {% comment %}Make this available when connected{% endcomment %}
-                    <button type="button" class="btn btn-primary">Schedule Meetup</button>
-                {% endif %}
+<section class="jumbotron">
+    <div class="container">
+        <small>{{ team.country }}</small>
+        <h2>{{ team.university }}</h2>
+        <article class="row">
+            <header>
+                <img src="https://placehold.it/1200x450" alt="GroupPicture" class="img-responsive">
+            </header>
+            <div class="profiles row">
+                {% for member in team.student_set.all %}
+                    <article class="member {% if team.members.all|length == 4%}col-sm-3 {% else %} col-sm-4 {%endif%}">
+                        <header>
+                            <img src="https://placehold.it/280x210" class="member-profile img-responsive" alt="Member Profile Picture">
+                        </header>
+                        <content>
+                           <p>{{ member.user.get_full_name | title }}</p>
+                           <small>{{ member.studentRole|title }}</small>
+                        </content>
+                    </article>
+                {% endfor %}
             </div>
-            <h2>{{ user.get_full_name }}</h2>
-            <p class="affiliation">{{ user.attendent.expertprofile.position }}</br>
-            {{ user.attendent.expertprofile.affiliation }}</p>
-            
-            
-            <nav class="social_links list-inline">
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Blog</a></li>
-            </nav>
-            <ul class="contact_details list-unstyled">
-                <li><span class="glyphicon glyphicon-phone">+43 678 123 5678</span></li>
-                <li><span class="glyphicon glyphicon-envelope"></span>{{ user.email }}</li>
-                <li><span class="glyphicon"></span></li>
-            </ul>
-            
-            
-        </div>
-        <content class="col-sm-8">
-            <article>
-                <header>
-                </header>
-                <content>
-                    <blockquote cite="">
-                        {{ user.attendent.expertprofile.slogan }}
-                    </blockquote>
-                </content>
-            </article>
-            <article>
-                <header>
-                    <h3>Biography</h3>
-                </header>
-                <content>
-                    {{ user.attendent.expertprofile.bio }}
-                </content>
-            </article>
-        </content>
-    </header>
+        </article>
+    </content>
 </section>
 {% endblock %}
 
 {% block profile-content %}
-<section class="container">
-     <content>
-        {% for experience in user.attendent.expertprofile.mediation_experience.all %}
-           <article class="row">
-               <header class="col-sm-4">
-                   <h4>{{ experience.get_profession_display }}</h4>
-                    <ul class="list-unstyled">
-                        <li>for {{ experience.duration }} years</li>
-                        <li>with {{ experience.cases }} cases worked</li>
-                    </ul>
-               </header>
-               <content class="col-sm-8">
-                   <h4>Summary</h4>
-                   <p>{{ experience.description }}</p>
-                   <aside>
-                       <div class="col-sm-6">
-                           <h4>Clients I worked with</h4>
-                           <p>{{ experience.priorClients }}</p>
-                       </div>
-                        <div class="col-sm-6">
-                            <h4>Places I worked in</h4>
-                            <p>{{ experience.placesWorked }}</p>
-                        </div>
-                   </aside>
-               </content>
-           </article>
-        {% endfor %}
-    </content>
-    
-    <article class="row">
+<main class="container">
+    <div class="content-main col-sm-12 col-md-8">
+    <section class="row">
+            <article class="row">
+                <header>
+                    <h3>Team Information</h3>
+                </header>
+                <content>
+                    <p>{{ team.teamprofile.presentation_text }}</p>
+                </content>
+            </article>
+            <article class="row">
+                <header>
+                    <h3>Information Section</h3>
+                </header>
+            </article>
+        </section>
         
-    </article>
+        {% comment %}
+        ----- MEMBER Section ---- 
+        {% endcomment %}
+        
+        <section class="member-display row">
+            <h3>Members</h3>
+        {% for member in team.student_set.all %}
+            <a href="{% url 'portal:student_profile' member.user.username %}">
+            <article class="member row">
+                <header class="col-sm-3">
+                    <small>{{ member.profile.country }}</small>
+                    <img src="https://placehold.it/280x210" class="img-responsive" alt="Profile Image of {{ member.user.get_full_name }}">
+                    <h4>{{ member.user.get_full_name }}</h4>
+                    <h5>{{ member.studentRole|title }}</h5>
+                </header>
+                <content class="col-sm-9">
+                    <!--<blockquote>{{ member.profile.studentprofile.slogan }}</blockquote>-->
+                    <p>{{ member.profile.bio|truncatechars:250 }}</p>
+                </content>
+                </article>
+                </a>
+            {% endfor %}
+            </section>
+    </div>
+    <div class="sidebar-right hidden-sm col-md-4">
+        
+        <article>
+            <header>
+                <img  class="img-responsive" src="https://placehold.it/90x120" alt="">
+                <h3>{{ team.university }}</h3>
+                <small>{{ team.country }}</small>
+            </header>
+            <content>
+                Display 
+                <img class="img-responsive" src="https://placehold.it/220x350" alt="">
+            </content>
+            <ul>
+                <li>Founded in:</li>
+                <li>Students: </li>
+                <li>Number of related Courses:</li>
+                <li>webpage</li>
+                <li></li>
+                <li></li>
+            </ul>
+        </article>
 
-</section>
+    </div>
+</main>
+  
+
 {% endblock %}
